<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LostCardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />


        <ImageView
            android:id="@+id/image"
            android:layout_width="96dp"
            android:layout_height="101dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/card"
            android:layout_gravity="center"
            android:contentDescription="@string/todo1" />

        <TextView
            android:id="@+id/spd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/safety_protection_department"
            android:textColor="@color/darkblue"
            android:layout_marginTop="5dp"
            android:textStyle="bold|italic"
            android:layout_gravity="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/nameSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i"
                android:textColor="@color/black"
                android:textSize="16dp" />


            <EditText
                android:id="@+id/editTextname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:hint="@string/full_names"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_employee_number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/regnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="@string/number"
                android:textColor="@color/black" />


        </LinearLayout>

        <TextView
            android:id="@+id/TextViewReason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reason_for_lost_card"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="16dp"
            android:hint="@string/explain_how_you_lost_your_card"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/TextViewSignature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/i_declare_the_above_information_is_true_and_correct"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/TextViewsignature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Signature:"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.github.gcacace.signaturepad.views.SignaturePad
                android:id="@+id/signature"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:background="@color/white"
                android:hint="@string/sign_here"
                android:textColor="@color/red" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/TextViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DATE:"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/yyyyy_mm_dd"
                android:paddingBottom="16dp"
                android:textColor="@color/black" />


        </LinearLayout>


        <Button
            android:id="@+id/submitbtn"
            android:layout_width="180dp"
            android:layout_height="67dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/submit"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="10dp"
            android:visibility="gone"
            />


    </LinearLayout>
</ScrollView>
