<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardApplicationProgressActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/skyblue"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/progresstext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textStyle="bold|italic"
        android:layout_weight="1"
        android:text="@string/card_application_progress"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ProgressBar
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginLeft="-300dp"
        android:layout_marginTop="250dp"
        android:id="@+id/progressBar"
        android:rotation="270"
        style="?android:attr/progressBarStyleHorizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        />


    <View
        android:id="@+id/cardapplicationreceived"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/oval1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237" />

    <ImageView
        android:id="@+id/imageApplicationReceived"
        android:layout_width="139dp"
        android:layout_height="115dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.817" />

    <TextView
        android:id="@+id/textCardApplication"
        android:layout_width="215dp"
        android:layout_height="25dp"
        android:text="@string/card_application_received"
        android:textColor="#555555"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771" />

    <View
        android:id="@+id/applicationapproved"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/oval3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardapplicationreceived" />

    <ImageView
        android:id="@+id/imageApplicationapprove"
        android:layout_width="132dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/card_application_approveds"
        android:src="@drawable/approve"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454" />


    <TextView
        android:id="@+id/textCardApproved"
        android:layout_width="168dp"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:text="Card Approved"
        android:textColor="#555555"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.441" />

    <View
        android:id="@+id/cardcollection"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/oval2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/applicationapproved"
        app:layout_constraintVertical_bias="0.6" />

    <ImageView
        android:id="@+id/imageApplicationcollection"
        android:layout_width="105dp"
        android:layout_height="123dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/cardeapply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />

    <TextView
        android:id="@+id/textCardCollection"
        android:layout_width="162dp"
        android:layout_height="25dp"
        android:text="@string/card_collection"
        android:textColor="#555555"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageApplicationcollection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageApplicationcollection"
        app:layout_constraintVertical_bias="0.443" />




</androidx.constraintlayout.widget.ConstraintLayout>